--- a/project6.html
+++ b/project6.html
@@ -2,15 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project 6 | Jitendra Krishna</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Modal Styling */
-    #imageModal { display: none; }
-    #imageModal.active { display: flex; }
+    body { font-size: 1.1rem; background: #fff; color: #1a202c; }
+
+    /* Modal backdrop + animation */
+    #imageModal {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.85);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.35s ease, visibility 0.35s;
+      z-index: 9999;
+    }
+    #imageModal.open {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    #modalImg {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 1rem;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+      display: block;
+      opacity: 0;
+      transform: scale(0.98);
+      transition: opacity 0.35s ease, transform 0.35s ease;
+    }
+    #modalImg.loaded { opacity: 1; transform: scale(1); }
+
+    .modal-close {
+      position: absolute;
+      top: 1.5rem;
+      right: 2rem;
+      color: white;
+      font-size: 2.25rem;
+      cursor: pointer;
+      z-index: 10000;
+      user-select: none;
+    }
+
+    .modal-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 2.6rem;
+      font-weight: 700;
+      color: #fff;
+      background: rgba(0,0,0,0.6);
+      padding: 0.75rem 1.1rem;
+      border-radius: 9999px;
+      cursor: pointer;
+      user-select: none;
+      z-index: 10000;
+      transition: background 0.25s ease, transform 0.18s ease, opacity 0.25s ease;
+      opacity: 0;
+    }
+    .modal-arrow.left { left: 1.5rem; }
+    .modal-arrow.right { right: 1.5rem; }
+    .modal-arrow:hover { background: rgba(0,0,0,0.85); transform: translateY(-50%) scale(1.08); }
+    #imageModal.open:hover .modal-arrow { opacity: 1; }
+
+    .popup-img { transition: transform 0.35s ease; cursor: pointer; }
+    .popup-img:hover { transform: scale(1.06); }
+
+    .fade-zoom { opacity: 0; transform: scale(0.98); transition: all 0.6s ease; }
+    .fade-zoom.show { opacity: 1; transform: scale(1); }
   </style>
 </head>
+
 <body class="bg-white text-gray-900">
 
   <!-- Back Button -->
@@ -20,75 +87,138 @@
 
   <!-- Project Hero -->
   <section class="relative h-80 flex flex-col justify-center items-center text-center bg-gray-100 mb-12">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">P R O F E S S I O N A L &nbsp; E X P E R I E N C E &nbsp; </h1>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">P R O F E S S I O N A L &nbsp; E X P E R I E N C E</h1>
     <p class="text-xl md:text-2xl text-gray-600 tracking-widest">
-      M Y &nbsp; R E A L  W O R L D &nbsp; E X P E R I E N C E &nbsp;
+      M Y &nbsp; R E A L  W O R L D &nbsp; E X P E R I E N C E
     </p>
   </section>
 
-  <!-- Zig-Zag Project Sections -->
+  <!-- Project Sections -->
   <section class="max-w-6xl mx-auto py-12 px-6 space-y-16">
 
     <!-- Block 1 -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <img src="./images/6a.png" alt="Project 6 Image 1" class="rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
-      <div>
-        <h2 class="text-3xl font-semibold mb-4">D E S I G N &nbsp; H A R M O N Y</h2>
-        <p class="text-gray-700 leading-relaxed">
-          During my internship here, I worked on sustainable design solutions for residential, commercial, and institutional projects. Site visits gave me hands-on exposure to eco-friendly materials, construction techniques, and practical applications of sustainability.
-        </p>
-      </div>
-    </div>
+<div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
+  <!-- Image Left -->
+  <div>
+    <img src="./images/6a.png" alt="Project 6 Image 1" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="0" />
+  </div>
+  <!-- Text Right -->
+  <div>
+    <h2 class="text-3xl font-semibold mb-4">D E S I G N &nbsp; H A R M O N Y</h2>
+    <p class="text-gray-700 leading-relaxed">
+      During my internship here, I worked on sustainable design solutions for residential, commercial, and institutional projects. Site visits gave me hands-on exposure to eco-friendly materials, construction techniques, and practical applications of sustainability.
+    </p>
+  </div>
+</div>
 
-    <!-- Block 2 (reverse) -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <div class="md:order-2">
-        <img src="./images/6b.png" alt="Project 6 Image 2" class="rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
-      </div>
-      <div>
-        <h2 class="text-3xl font-semibold mb-4">V S &nbsp; A S S O C I A T E S</h2>
-        <p class="text-gray-700 leading-relaxed">
-          I freelanced with this company, primarily creating 3D elevations and modeling for residential buildings, enhancing visualization and design communication.
-        </p>
-      </div>
-    </div>
+<!-- Block 2 (reverse for zig-zag) -->
+<div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
+  <!-- Text Left on larger screens -->
+  <div class="md:order-2">
+    <img src="./images/6b.png" alt="Project 6 Image 2" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="1" />
+  </div>
+  <!-- Image Right -->
+  <div class="md:order-1">
+    <h2 class="text-3xl font-semibold mb-4">V S &nbsp; A S S O C I A T E S</h2>
+    <p class="text-gray-700 leading-relaxed">
+      I freelanced with this company, primarily creating 3D elevations and modeling for residential buildings, enhancing visualization and design communication.
+    </p>
+  </div>
+</div>
+
 
     <!-- Project Gallery -->
-    <div class="mt-20 text-center">
+    <div class="mt-20 text-center fade-zoom">
       <h2 class="text-4xl font-bold mb-12">P R O J E C T &nbsp; G A L L E R Y</h2>
       <div class="grid md:grid-cols-4 gap-8">
-        <img src="./images/6c.png" alt="Gallery 1" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6d.png" alt="Gallery 2" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6e.png" alt="Gallery 3" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6f.png" alt="Gallery 4" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6g.png" alt="Gallery 5" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6h.png" alt="Gallery 6" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6i.png" alt="Gallery 7" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/6j.png" alt="Gallery 8" class="rounded-xl shadow-lg cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
+        <img src="./images/6c.png" class="rounded-xl shadow-lg popup-img" data-index="2" />
+        <img src="./images/6d.png" class="rounded-xl shadow-lg popup-img" data-index="3" />
+        <img src="./images/6e.png" class="rounded-xl shadow-lg popup-img" data-index="4" />
+        <img src="./images/6f.png" class="rounded-xl shadow-lg popup-img" data-index="5" />
+        <img src="./images/6g.png" class="rounded-xl shadow-lg popup-img" data-index="6" />
+        <img src="./images/6h.png" class="rounded-xl shadow-lg popup-img" data-index="7" />
+        <img src="./images/6i.png" class="rounded-xl shadow-lg popup-img" data-index="8" />
+        <img src="./images/6j.png" class="rounded-xl shadow-lg popup-img" data-index="9" />
       </div>
     </div>
 
   </section>
 
-  <!-- Back to Portfolio Button -->
+  <!-- Modal with arrows -->
+  <div id="imageModal" aria-hidden="true" role="dialog" aria-label="Image viewer">
+    <div class="modal-close" role="button" aria-label="Close" onclick="closeModal()">×</div>
+    <button class="modal-arrow left" aria-label="Previous image" onclick="changeImage(-1)">&#10094;</button>
+    <img id="modalImg" src="" alt="Open project image">
+    <button class="modal-arrow right" aria-label="Next image" onclick="changeImage(1)">&#10095;</button>
+  </div>
+
+  <!-- Back Button -->
   <div class="max-w-6xl mx-auto px-6 py-12 text-center">
     <a href="index.html" class="inline-block px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800">Back to Portfolio</a>
   </div>
 
-  <!-- Image Modal -->
-  <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-80 items-center justify-center z-50">
-    <span class="absolute top-6 right-10 text-white text-4xl cursor-pointer" onclick="closeModal()">&times;</span>
-    <img id="modalImage" src="" class="max-h-[90%] max-w-[90%] mx-auto rounded-xl shadow-2xl" />
-  </div>
-
   <script>
-    function openModal(src) {
-      document.getElementById("modalImage").src = src;
-      document.getElementById("imageModal").classList.add("active");
+    // Scroll reveal
+    const fadeElems = document.querySelectorAll('.fade-zoom');
+    function revealOnScroll() {
+      fadeElems.forEach(el => {
+        const rect = el.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 100) el.classList.add('show');
+      });
     }
+    window.addEventListener('load', revealOnScroll);
+    window.addEventListener('scroll', revealOnScroll);
+
+    // Modal functionality
+    const popupThumbs = Array.from(document.querySelectorAll('.popup-img'));
+    const modal = document.getElementById('imageModal');
+    const modalImg = document.getElementById('modalImg');
+    let currentIndex = 0;
+
+    popupThumbs.forEach((thumb, i) => {
+      thumb.addEventListener('click', () => openModal(i));
+    });
+
+    function openModal(index) {
+      currentIndex = index;
+      modal.classList.add('open');
+      modal.setAttribute('aria-hidden', 'false');
+      modalImg.classList.remove('loaded');
+      modalImg.src = popupThumbs[currentIndex].src;
+      modalImg.onload = () => requestAnimationFrame(() => modalImg.classList.add('loaded'));
+    }
+
     function closeModal() {
-      document.getElementById("imageModal").classList.remove("active");
+      modal.classList.remove('open');
+      modal.setAttribute('aria-hidden', 'true');
+      setTimeout(() => { modalImg.src = ''; modalImg.classList.remove('loaded'); }, 300);
     }
+
+    function changeImage(step) {
+      currentIndex = (currentIndex + step + popupThumbs.length) % popupThumbs.length;
+      modalImg.classList.remove('loaded');
+      setTimeout(() => { modalImg.src = popupThumbs[currentIndex].src; }, 60);
+      modalImg.onload = () => modalImg.classList.add('loaded');
+    }
+
+    modal.addEventListener('click', (e) => { if(e.target === modal) closeModal(); });
+
+    document.addEventListener('keydown', e => {
+      if(!modal.classList.contains('open')) return;
+      if(e.key === 'ArrowLeft') changeImage(-1);
+      if(e.key === 'ArrowRight') changeImage(1);
+      if(e.key === 'Escape') closeModal();
+    });
+
+    // Swipe gestures
+    let touchStartX = 0;
+    modal.addEventListener('touchstart', e => { if(!modal.classList.contains('open')) return; touchStartX = e.changedTouches[0].clientX; }, {passive:true});
+    modal.addEventListener('touchend', e => { 
+      if(!modal.classList.contains('open')) return;
+      const dx = e.changedTouches[0].clientX - touchStartX;
+      if(dx > 50) changeImage(-1);
+      if(dx < -50) changeImage(1);
+    }, {passive:true});
   </script>
 
 </body>
