--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 </section>
 
+
+
   <!-- About Section -->
   <section id="about" class="max-w-5xl mx-auto py-20 px-6">
     <div class="grid md:grid-cols-2 gap-12 items-center">
@@ -81,8 +83,7 @@
           class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
           <img src="./images/Project - 3.jpg" alt="Project 3" class="rounded-md mb-4" />
           <h3 class="text-xl font-semibold mb-2">Multi-Specialty Hospital</h3>
-          <p class="text-gray-600 text-sm">The Multi-Specialty Hospital integrates advanced medical technology with
-            patient-centric design.</p>
+          <p class="text-gray-600 text-sm">The Multi-Specialty Hospital merges advanced medical technology with patient-focused design, fostering a space of care, comfort, and efficiency.</p>
         </a>
 
         <!-- Project 4 -->
@@ -108,7 +109,7 @@
           class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col justify-between hover:-translate-y-1 hover:scale-105 transform">
           <img src="./images/project - 6.jpg" alt="Project 6" class="rounded-md mb-4" />
           <h3 class="text-xl font-semibold mb-2">Professional Experience</h3>
-          <p class="text-gray-600 text-sm">My Experience from the Internship and Freelance Projects</p>
+          <p class="text-gray-600 text-sm">Internship and freelance experiences that shaped my journey, with hands-on work in 3D elevations, modeling, and residential design projects.</p>
         </a>
 
       </div>
